# HesWidgetsDesign

./: .gitignore  CMakeLists.txt  FramelessWindow.cpp  FramelessWindow.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp  titlebar.cpp  titlebar.h
BorderlessWindow/: .gitignore  BorderlessWindow.pro  BorderlessWindow.vcxproj  border.cpp  border.h  border_new.cpp  borderlesswindow.cpp  borderlesswindow.h  borderlesswindow_backup.cpp  borderlesswindow_new.cpp  borderlesswindow_p.cpp  borderlesswindow_p.h  form.ui  main.cpp  mainarea.cpp  mainarea.h  rcc.qrc  titlebar.cpp  titlebar.h
BorderlessWindow/docs/: QT-BorderlessWindow_实现分析.md
BorderlessWindow/titlebale/: closebutton.cpp  closebutton.h  colormanagement.cpp  colormanagement.h  maximizebutton.cpp  maximizebutton.h  minimizebutton.cpp  minimizebutton.h  rec.qrc  simpletitlebar.cpp  simpletitlebar.h  standardtitlebar.cpp  standardtitlebar.h  titlebarbase.cpp  titlebarbase.h  titlebarbutton.cpp  titlebarbutton.h
docs/: FramelessWindow_实现总结.md  Frameless_vs_Borderless_对比分析.md
titlebale/: titlebar.cpp  titlebar.h  titlebarbutton.cpp  titlebarbutton.h
